<resources>
    <string name="app_name">AVA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="from">from</string>
    <string name="ldsoftwares_pvt_ltd">LDSoftwares Pvt Ltd.</string>
    <string name="hey_hello">Hey!! hello…</string>
    <string name="ava_intro_one"><p>I will assist you in monitoring and controlling your devices.</p></string>
    <string name="ava_intro_two"><p>The AVA is an Artificial Intelligence Virtual Assistant. It allows you to control your devices manually as well as automatically depending on your preference.</p></string>
    <string name="continue_txt">Continue</string>
    <string name="i_m_ava">I\'m AVA</string>
</resources>