<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/WelcomeScreenLayout"
    tools:context=".onboardingscreen.welcome.WelComeScreenFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cl_group1_welcome_screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="
            tv_hello_welcome_screen,
            tv_im_ava_welcome_screen,
            tv_ava_intro_one_welcome_screen,
            tv_ava_intro_two_welcome_screen,
            bv_continue_welcome_screen,
            guideline3_1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/tv_hello_welcome_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_hello"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tv_im_ava_welcome_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_serif_regular"
        android:text="@string/i_m_ava"
        android:textColor="@color/purple_solid"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_ava_intro_one_welcome_screen"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <TextView
        android:id="@+id/tv_ava_intro_one_welcome_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_serif_regular"
        android:text="@string/ava_intro_one"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:lineSpacingExtra="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_ava_intro_two_welcome_screen"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <TextView
        android:id="@+id/tv_ava_intro_two_welcome_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_serif_regular"
        android:text="@string/ava_intro_two"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:lineSpacingExtra="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3_1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <Button
        android:id="@+id/bv_continue_welcome_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_txt"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        android:background="@drawable/button_start_welcome_screen"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

</androidx.constraintlayout.widget.ConstraintLayout>